# chorus

./: .clippy.toml  .env.example  .gitignore  .release-please-manifest.json  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  codecov.yml  deny.toml  docker-compose.yml  release-please-config.json  sonar-project.properties
.cargo/: audit.toml  config.toml
.github/: labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  claude.yml  publish-crates.yml  publish-sdks.yml  release-please.yml  weekly-digest.yml
chorus-mail/: Dockerfile
chorus-mail/config/: main.cf  master.cf  opendkim.conf
chorus-mail/scripts/: bounce-handler.sh  dns-setup.sh  entrypoint.sh
crates/chorus-core/: CHANGELOG.md  Cargo.toml  README.md
crates/chorus-core/src/: client.rs  email.rs  error.rs  lib.rs  router.rs  sms.rs  template.rs  types.rs
crates/chorus-core/src/templates/: email_verify.rs  magic_link.rs  mod.rs  otp.rs  password_reset.rs  welcome.rs
crates/chorus-core/tests/: sdk_import.rs
crates/chorus-providers/: CHANGELOG.md  Cargo.toml  README.md
crates/chorus-providers/src/: lib.rs
crates/chorus-providers/src/email/: mailgun.rs  mock.rs  mod.rs  resend.rs  ses.rs  smtp.rs
crates/chorus-providers/src/sms/: mock.rs  mod.rs  plivo.rs  telnyx.rs  twilio.rs
crates/chorus-server/: Cargo.toml
crates/chorus-server/src/: app.rs  config.rs  main.rs
crates/chorus-server/src/db/: mod.rs  postgres.rs  provider_config.rs  webhook.rs
crates/chorus-server/src/db/migrations/: 002_provider_configs.sql
crates/chorus-server/src/otp/: mod.rs
crates/chorus-server/src/queue/: delayed.rs  enqueue.rs  mod.rs  router_builder.rs  webhook_dispatch.rs  worker.rs
crates/chorus-server/src/routes/: batch.rs  email.rs  health.rs  keys.rs  messages.rs  mod.rs  otp.rs  provider_configs.rs  sms.rs  webhooks.rs
crates/chorus-server/tests/: api_test.rs
docs/guides/: auth-service-integration.md
docs/plans/: 2026-04-01-chorus-design.md  2026-04-01-chorus-phase1-implementation.md  2026-04-02-dev-infrastructure-design.md  2026-04-02-dev-infrastructure-implementation.md  2026-04-05-chorus-server-design.md  2026-04-05-chorus-server-implementation.md  2026-04-05-chorus-server-phase2b-design.md  2026-04-05-chorus-server-phase2b-implementation.md  2026-04-05-ci-crates-publish-design.md  2026-04-05-crates-io-release-prep-design.md  2026-04-05-crates-io-release-prep-implementation.md  2026-04-05-phase3-implementation.md  2026-04-05-phase3-providers-templates-chorusmail-design.md  2026-04-08-chorus-sdk-rename.md  2026-04-10-implementation-plan.md  2026-04-10-three-features-design.md  2026-04-13-sdks-implementation-plan.md  2026-04-13-sdks-v020-design.md  2026-04-14-v030-plan.md  2026-04-15-missing-metrics-design.md  2026-04-15-missing-metrics-implementation.md  2026-04-17-admin-panel-api.md  2026-04-17-structured-logging.md
docs/superpowers/plans/: 2026-04-28-suppression-list-mvp.md  2026-05-01-idempotency-keys.md  2026-05-06-verification-api.md  2026-05-19-totp.md  2026-05-29-magic-link.md
docs/superpowers/specs/: 2026-04-28-suppression-list-mvp-design.md  2026-05-01-idempotency-keys-design.md  2026-05-06-verification-api-design.md  2026-05-19-totp-design.md  2026-05-29-magic-link-design.md
scripts/: pre-commit  setup-hooks.sh
sdks/c/: CMakeLists.txt
sdks/c/include/: chorus.h
sdks/c/src/: chorus.c
sdks/c/tests/: test_chorus.c
sdks/go/: client.go  client_test.go  errors.go  go.mod  types.go
sdks/java/: pom.xml
sdks/java/src/main/java/com/cntm/labs/chorus/: ChorusClient.java
sdks/java/src/main/java/com/cntm/labs/chorus/exception/: ChorusException.java
sdks/java/src/main/java/com/cntm/labs/chorus/model/: BatchSendRequest.java  BatchSendResponse.java  CreateWebhookRequest.java  OtpSendRequest.java  OtpVerifyRequest.java  SendEmailRequest.java  SendResponse.java  SendSmsRequest.java  WebhookResponse.java
sdks/java/src/main/java/io/github/cntm/labs/chorus/: ChorusClient.java
sdks/java/src/main/java/io/github/cntm/labs/chorus/exception/: ChorusException.java
sdks/java/src/test/java/com/cntm/labs/chorus/: ChorusClientTest.java
sdks/java/src/test/java/io/github/cntm/labs/chorus/: ChorusClientTest.java
sdks/python/: pyproject.toml
sdks/python/chorus/: __init__.py  client.py  errors.py  types.py
sdks/python/chorus_sdk.egg-info/: PKG-INFO  SOURCES.txt
sdks/python/tests/: test_client.py
sdks/rust/: Cargo.toml  README.md
sdks/rust/src/: lib.rs
sdks/rust/tests/: prelude_test.rs
sdks/typescript/: package-lock.json  package.json  tsconfig.json
sdks/typescript/src/: client.ts  errors.ts  index.ts  types.ts
sdks/typescript/tests/: client.test.ts
services/chorus-server/: Cargo.toml
services/chorus-server/src/: app.rs  config.rs  crypto.rs  idempotency.rs  lib.rs  main.rs  metrics.rs  suppression.rs  totp.rs  verification.rs
services/chorus-server/src/auth/: admin.rs  api_key.rs  mod.rs
services/chorus-server/src/billing/: mod.rs  stripe_client.rs  usage.rs
services/chorus-server/src/db/: admin.rs  billing.rs  idempotency.rs  mod.rs  postgres.rs  provider_config.rs  suppression.rs  totp.rs  verification.rs  webhook.rs
services/chorus-server/src/db/migrations/: 001_initial.sql  003_create_webhooks.sql  004_create_billing.sql  005_create_admin_keys.sql  006_webhook_deliveries.sql  007_create_suppressions.sql  008_create_idempotency_keys.sql  009_create_verifications.sql  010_create_totp.sql
services/chorus-server/src/middleware/: metrics.rs  request_id.rs
services/chorus-server/src/queue/: dead_letter.rs  delayed.rs  enqueue.rs  mod.rs  router_builder.rs  webhook_dispatch.rs  worker.rs
services/chorus-server/src/routes/: batch.rs  billing.rs  email.rs  health.rs  internal.rs  keys.rs  messages.rs  mod.rs  otp.rs  provider_configs.rs  sms.rs  suppressions.rs  totp.rs  verifications.rs  webhooks.rs
services/chorus-server/src/routes/admin/: accounts.rs  billing.rs  dlq.rs  messages.rs  mod.rs  providers.rs  webhooks.rs
services/chorus-server/tests/: api_test.rs
(+9 files in other folders)
