[workspace]
resolver = "2"
members = [
    "crates/chorus-core",
    "crates/chorus-providers",
    "crates/chorus-server",
]

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Observability
tracing = "0.1"

# Crypto
ring = "0.17"
aes-gcm = "0.10"
base64 = "0.22"
hex = "0.4"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
url = "2"

# Email (SMTP)
lettre = { version = "0.11", features = ["tokio1-native-tls"] }

# Web
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono", "json", "migrate", "macros"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp"] }

# Crypto (hash)
sha2 = "0.10"

# Config
dotenvy = "0.15"

[workspace.lints.rust]
unsafe_code = "forbid"
dead_code = "deny"
unused_imports = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
dbg_macro = "deny"
todo = "warn"
print_stdout = "warn"
print_stderr = "warn"

[profile.release]
strip = true
lto = true
codegen-units = 1
