[package]
name = "chorus-core"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Core traits and types for Chorus CPaaS — SMS, Email, OTP with smart routing and multi-provider failover"
repository = "https://github.com/cntm-labs/chorus"
homepage = "https://github.com/cntm-labs/chorus"
keywords = ["sms", "email", "otp", "cpaas", "messaging"]
categories = ["api-bindings", "network-programming"]
readme = "README.md"
rust-version = "1.85.0"

[lib]
name = "chorus"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
minijinja = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
