[package]
name = "chorus-providers"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "SMS and Email provider implementations for Chorus CPaaS — Telnyx, Twilio, Plivo, Resend, SES, SMTP"
repository = "https://github.com/cntm-labs/chorus"
homepage = "https://github.com/cntm-labs/chorus"
keywords = ["sms", "email", "twilio", "telnyx", "plivo"]
categories = ["api-bindings", "network-programming"]
readme = "README.md"
rust-version = "1.85.0"

[dependencies]
chorus-core = { path = "../chorus-core", version = "0.1.1" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
lettre = { workspace = true }

[lints]
workspace = true
