[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chorus-sdk"
version = "0.3.0"
description = "Official Python SDK for Chorus CPaaS — SMS, Email, OTP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["sms", "email", "otp", "cpaas", "messaging", "chorus"]
dependencies = ["httpx>=0.27"]

[project.urls]
Repository = "https://github.com/cntm-labs/chorus"

[tool.pytest.ini_options]
testpaths = ["tests"]
