[package]
name = "chorus-rs"
version = "0.2.0"
edition = "2021"
description = "Chorus CPaaS SDK — SMS, Email, OTP with smart routing and multi-provider failover"
license = "MIT"
repository = "https://github.com/cntm-labs/chorus"
readme = "README.md"
keywords = ["sms", "email", "otp", "cpaas", "messaging"]
categories = ["api-bindings", "web-programming"]

[lib]
name = "chorus"

[dependencies]
chorus-core = { path = "../../crates/chorus-core", version = "0.1.1" }
chorus-providers = { path = "../../crates/chorus-providers", version = "0.1.1" }

[lints]
workspace = true
