[package]
name = "chorus-server"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Axum REST API server for Chorus CPaaS"
publish = false

[dependencies]
chorus-core = { path = "../../crates/chorus-core", version = "0.3.0" }
chorus-providers = { path = "../../crates/chorus-providers", version = "0.3.0" }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
hmac = { version = "0.12", features = ["std"] }
reqwest = { workspace = true }
async-trait = { workspace = true }
hickory-resolver = { workspace = true }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false, features = ["http-listener"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[lints]
workspace = true
